# flash-head

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/flash_head/: __init__.py  _version.py  flash_head.py  fused.py  loading.py
src/flash_head/patches/: __init__.py  async_llm.py  eagle.py  gpu_model_runner.py  llm.py  logits_processor.py  rejection_sampler.py  sampler.py
tests/: __init__.py  run_benchmark.py  test_compare.py  test_on_remote.sh  test_on_remote_docker.sh
