# Copyright (C) 2026 Embedl AB

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-head"
dynamic = ["version"]
description = "FlashHead: vLLM Plugin for Fast Language Model Head Inference"
requires-python = ">=3.10"
dependencies = []  # torch, safetensors, huggingface_hub provided by vLLM

[project.entry-points."vllm.general_plugins"]
flash_head = "flash_head:register"

[tool.setuptools.dynamic]
version = {attr = "flash_head._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
